# blueprints

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
blueprints/: __init__.py  __main__.py
blueprints/cli/: cli.py
blueprints/lib/resource/: __init__.py
blueprints/lib/resource/blueprint/: blueprint.py  blueprint_deserializer.py  blueprint_transformer.py  types.pyi
blueprints/lib/resource/blueprint/palette_entry/: __init__.py  block_blueprint_palette_entry.py  blueprint_blueprint_palette_entry.py  material_blueprint_palette_entry.py  void_blueprint_palette_entry.py
blueprints/lib/resource/filter/: __init__.py  filter.py  filter_deserializer.py  types.py  types.pyi
blueprints/lib/resource/filter/rule/: keep_blocks_filter_rule.py  keep_materials_filter_rule.py  replace_blocks_filter_rule.py  replace_materials_filter_rule.py
blueprints/lib/resource/material/: material.py  material_deserializer.py  types.pyi
examples/box_dungeon/: beet.yaml
examples/dank_dungeon/: beet.yaml
examples/demo/: beet.yaml
examples/fleecy_box/: beet.yaml
examples/scratch/: beet.yaml
mcblueprints/: __init__.py  __main__.py  options.py  plugin.py
mcblueprints/cli/: cli.py
mcblueprints/lib/: __init__.py  block.py  block_map.py  block_provider.py  block_state.py  blueprint.py  filter.py  material.py  nbt.py  normalizable_model.py  structure_data.py  structure_serializer.py  template.py  template_variable.py  theme.py  theme_element.py  utils.py  vec.py
mcblueprints/lib/blueprint/: __init__.py  blueprint.py  blueprint_deserializer.py  blueprint_transformer.py
mcblueprints/lib/blueprint/palette_entries/: block.py  blueprint.py  material.py  void.py
mcblueprints/lib/filter/: filter.py  filter_deserializer.py
mcblueprints/lib/filter/rules/: keep_materials_filter_rule.py  replace_blocks_filter_rule.py
mcblueprints/lib/material/: material.py  material_deserializer.py
mcblueprints/lib/resource/blueprint/: __init__.py  blueprint.py  blueprint_deserializer.py  blueprint_transformer.py  types.py  types.pyi
mcblueprints/lib/resource/filter/: __init__.py  filter.py  filter_deserializer.py  types.pyi
mcblueprints/lib/resource/material/: __init__.py  material.py  material_deserializer.py  types.py  types.pyi
mcblueprints/plugins/: blueprints.py
mcblueprints/utils/: __init__.py  nbt.py
tests/: test_examples.py
tests/box_dungeon/: beet.yaml
tests/dank_dungeon/: beet.yaml
tests/datapacks/demo-datapack/: pack.mcmeta
tests/demo/: beet.yaml
tests/demo/src/: pack.mcmeta
tests/fleecy_box/: beet.yaml
tests/scratch/: beet.yaml
(+128 files in other folders)
