[tool.poetry]
name = "blueprints"
version = "0.1.0"
description = "A text-based Minecraft structure format optimized for human-readability."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Arcensoth/blueprints"
homepage = "https://github.com/Arcensoth/blueprints"
keywords = ["minecraft", "structures", "blueprints", "datapack"]

[tool.poetry.dependencies]
python = "^3.8"
pyckaxe = {path = "../pyckaxe", develop = true}
click = "^7.1.2"
nbtlib = "^1.12.0"
colorama = {version = "^0.4.3", optional = true}
colorlog = {version = "^4.2.1", optional = true}
pyyaml = {version = "^5.3.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.5b0"
isort = "^5.8.0"
rope = "^0.19.0"
coverage = "^5.5"
pytest-cov = "^2.12.0"
pytest = "^6.2.4"

[tool.poetry.extras]
colors = ["colorama", "colorlog"]
yaml = ["pyyaml"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
