[tool.poetry]
name = "mcblueprints"
version = "0.1.0"
description = "Text-based structures for Minecraft."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Arcensoth/blueprints"
homepage = "https://github.com/Arcensoth/blueprints"
keywords = ["minecraft", "structures", "blueprints", "datapacks"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^7.1.2"
pyckaxe = {path = "../pyckaxe", develop = true}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
rope = "^0.19.0"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
