[tool.poetry]
name = "mcblueprints"
version = "0.1.0"
description = "Text-based structures for Minecraft."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Arcensoth/blueprints"
homepage = "https://github.com/Arcensoth/blueprints"
keywords = ["minecraft", "structures", "blueprints", "datapacks"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
nbtlib = "^1.12.1"
beet = ">=0.62.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
rope = "^0.22.0"

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
